--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-final-form-listeners": "^1.0.0",
     "daisyui": "^2.19.1",
     "final-form": "^4.20.7",
     "final-form-arrays": "^3.0.2",
@@ -17,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-final-form": "^6.5.9",
     "react-final-form-arrays": "^3.1.3",
+    "react-final-form-listeners": "^1.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
